# TelegramLogs

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  docker-image.yml  python-app.yml
src/: _log_record.py  bot_api.py  exceptions.py  log.py  mesages_listener.py  msg_handler.py  routes.py  setting.py  settings.py
