[tool.poetry]
name = "telegram_logs"
version = "0.1.0"
description = "Dump logs from services to Telegram bot"
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "~2.14.3"
environs = "~9.3.3"
uvloop = "~0.16.0"
ujson = "~4.1.0"
cchardet = "~2.1.7"
aiohttp = {version = "~3.7.4.post0", extras = ["speedups"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
