[tool.poetry]
name = "telegram_logs"
version = "0.1.0"
description = "Dump logs from services to Telegram bot"
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "~2.18"
environs = "~9.4.0"
uvloop = "~0.16.0"
ujson = "~5.1.0"
cchardet = "~2.1.7"
aiohttp = "~3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
